# greentic-mcp

./: .gitignore  Cargo.toml  README.md  SECURITY_FIX_REPORT.md  coverage-policy.json  pr-changed-files.txt  pr-comment.md
.githooks/: pre-commit
.github/workflows/: auto-tag.yml  ci.yml  codex-security-fix.yml  codex-semver-fix.yml  crates-publish.yml  dev-publish.yml  nightly-coverage.yml  nightly-semver.yml  publish-mcp-adapter.yml  publish.yml  release-binaries.yml
ci/: local_check.sh
crates/mcp-adapter/: Cargo.toml  README.md
crates/mcp-adapter/src/: lib.rs
crates/mcp-adapter/wit/: package.wit
crates/mcp-exec/: Cargo.toml
crates/mcp-exec/examples/example-com/: README.md  example_home.yaml
crates/mcp-exec/src/: config.rs  error.rs  lib.rs  path_safety.rs  router.rs  runner.rs  store.rs  test_support.rs
crates/mcp-exec/tests/: list_tools.rs  online_weather.rs  router_fixture.rs
docs/: mcp-components.md
greentic-mcp/: Cargo.toml
greentic-mcp/assets/: mcp_adapter_25_06_18.component.wasm
greentic-mcp/src/: auth.rs  compose.rs  executor.rs  retry.rs  tool_map.rs  types.rs
greentic-mcp/tests/fixtures/echo_tool/: Cargo.toml  echo_tool.wasm
scripts/: build_adapter.sh
