[workspace]
members = [
    "crates/mcp-exec",
    "crates/mcp-adapter",
    "greentic-mcp",
    "greentic-mcp/tests/fixtures/echo_tool",
    "crates/mcp-exec/tests/router_echo",
    "crates/mcp-exec/tests/legacy_exec",
]
resolver = "2"

[profile.test]
debug = "line-tables-only"

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/agentic/greentic-mcp"
version = "0.4.22"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
wasmtime = { version = "42", default-features = false, features = ["async", "component-model", "cranelift", "runtime", "std"] }
wasmtime-wasi = { version = "42", default-features = false, features = ["p2"] }
tempfile = "3"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "gzip", "brotli", "deflate", "rustls"] }
greentic-types = "0.4"
greentic-interfaces-wasmtime = "=0.4.107"
greentic-interfaces-guest = { version = "0.4", default-features = false, features = ["guest"] }
indexmap = "2"
rand = { version = "0.10", features = ["std"] }
serde_yaml_bw = {package="serde_yaml_gtc", version="2.5.2"}
greentic-mcp-exec = { version = "0.4", path = "crates/mcp-exec" }
wit-bindgen = { version = "0.53", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
cap-std = "4"
wasmtime-wasi-http = "42"
wasmtime-wasi-tls = "42"
