[package]
name = "greentic-mcp"
version.workspace = true
edition = "2024"
license = "MIT"
description = "MCP ToolMap + WASIX/WASI executor bridge"
repository = "https://github.com/greenticai/greentic-mcp"
homepage = "https://github.com/greenticai/greentic-mcp"
readme = "README.md"
keywords = ["greentic", "mcp", "wasm", "wasi"]
categories = ["command-line-utilities", "wasm"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/greentic-mcp-v{ version }-{ target }.tgz"
pkg-fmt = "tgz"
bin-dir = "greentic-mcp-v{ version }-{ target }/{ bin }{ binary-ext }"

[lib]
name = "greentic_mcp"
path = "src/lib.rs"

[features]
default = ["wasi", "describe-v1", "runner-host-v1"]
wasi = []
describe-v1 = []
runner-host-v1 = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
greentic-mcp-exec = { workspace = true }
greentic-types.workspace = true
indexmap.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_bw.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true
wasmtime-wasi-tls.workspace = true

[dev-dependencies]
