[package]
name = "greentic-mcp-adapter"
version.workspace = true
edition = "2024"
license = "MIT"
publish = false
description = "Guest MCP adapter template exporting greentic:component/node@0.6.0 and importing wasix:mcp@25.06.18"
readme = "README.md"

[package.metadata.component]
package = "greentic:mcp-adapter"
world = "adapter"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
greentic-interfaces-guest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_cbor = "0.11"
serde_json.workspace = true
thiserror.workspace = true
wit-bindgen.workspace = true

[dev-dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
