[package]
name = "greentic-mcp-adapter"
version.workspace = true
edition = "2024"
license = "MIT"
publish = false
description = "Guest MCP adapter template exporting greentic:component/node@0.6.0 and importing wasix:mcp@25.06.18"
readme = "README.md"

[package.metadata.component]
package = "greentic:mcp-adapter"
world = "adapter"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Guest telemetry (OAuth lifecycle logs/spans) routed to the host over the
# `greentic:telemetry/logging` WIT import. Opt-in (default OFF): enabling it
# makes the component import that interface, which not every runtime provides
# yet. Compiles to no-ops when disabled.
default = []
telemetry = ["dep:greentic-telemetry", "greentic-telemetry/wit-guest"]

[dependencies]
greentic-interfaces-guest.workspace = true
# Export-free OAuth card logic (decision + Adaptive Card render). Path dep on a
# sibling checkout for now; to be published before merge.
oauth-card-core = "0.1.5"
greentic-telemetry = { version = "0.5", default-features = false, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_cbor = "0.11"
serde_json.workspace = true
thiserror.workspace = true
wit-bindgen.workspace = true

[dev-dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
