[package]
name = "greentic-mcp-exec"
version.workspace = true
edition = "2024"
license = "MIT"
description = "Greentic executor for running wasix:mcp-compatible WebAssembly components with policy-driven verification and sandboxing."
repository = "https://github.com/greenticai/greentic-mcp"
homepage = "https://github.com/greenticai/greentic-mcp"
documentation = "https://docs.rs/greentic-mcp-exec"
readme = "README.md"
keywords = ["greentic", "wasm", "executor", "mcp"]
categories = ["wasm"]
include = ["src/**", "tests/**", "README.md", "Cargo.toml", "wit/**"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/greentic-mcp-v{ version }-{ target }.tgz"
pkg-fmt = "tgz"
bin-dir = "greentic-mcp-v{ version }-{ target }/{ bin }{ binary-ext }"

[features]
default = ["describe-v1", "runner-host-v1"]
describe-v1 = []
runner-host-v1 = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
cap-std.workspace = true
clap.workspace = true
greentic-interfaces-wasmtime.workspace = true
greentic-types.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true
wasmtime-wasi-tls.workspace = true

[dev-dependencies]
tempfile.workspace = true
wat = "1"
