[package]
name = "echo_tool"
version = "0.1.0"
edition = "2021"
publish = false
description = "Test fixture for greentic-mcp; not intended for crates.io"
license = "MIT"
repository = "https://github.com/greenticai/greentic-mcp"
homepage = "https://github.com/greenticai/greentic-mcp"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
wit-bindgen.workspace = true

[package.metadata]
cargo-not-public = true
